<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Process Cleaner</string>
    <string name="app_description">Drocode.com</string>
    
    <string name="app_help">Touch lists to end process, hold for details.</string>
    
    <string name="state_running">Running</string>
    <string name="state_stopped">Stopped</string>
    
    <string name="menu_refresh">Refresh</string>
    <string name="menu_showall">Show All Process</string>
    
    
    <string name="menu_kill">Force Stop</string>
    <string name="menu_hide">Hide Process</string>
    <string name="menu_details">Show Details</string>
    
    
    <string name="detail_controls">Controls</string>
    <string name="detail_uninstall">Uninstall</string>
    <string name="detail_kill">Force Stop</string>
    
    <string name="detail_permission">Permission</string>
    <string name="detail_perms_show">Show more</string>
    <string name="detail_perms_hide">Hide</string>
</resources>
