<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
	>
	
	<LinearLayout
  		android:orientation="vertical"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		>

		<RelativeLayout
    		android:layout_width="fill_parent"
    		android:layout_height="?android:attr/listPreferredItemHeight"
    		>
    
    		<ImageView android:id="@+id/icon"
    			android:layout_width="48dp"
    			android:layout_height="48dp"
    			android:layout_centerVertical="true"
    			android:layout_marginLeft="3dp"
    			/>
    	
			<TextView android:id="@+id/title"
				android:textAppearance="?android:attr/textAppearanceLarge"  
    			android:layout_width="wrap_content" 
    			android:layout_height="wrap_content"
    			android:layout_toRightOf="@+id/icon" 
    			android:layout_marginLeft="6dp"
    			android:layout_marginTop="6dp"
    			android:ellipsize="end"
 	   			/>

			<TextView android:id="@+id/version"
    			android:layout_width="wrap_content" 
    			android:layout_height="wrap_content" 
    			android:layout_below="@+id/title"
    			android:layout_alignLeft="@+id/title"
    			android:textAppearance="?android:attr/textAppearanceSmall"
 		   		/>
		 		   	
		</RelativeLayout>
		
		<TextView android:id="@+id/description"
			android:textAppearance="?android:attr/textAppearanceSmall"  
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content"
    		android:layout_marginLeft="6dp"
    		android:layout_marginBottom="6dp"
 	   		/>
		
		<TextView 
			android:text="@string/detail_controls"
   			android:layout_width="fill_parent" 
   			android:layout_height="wrap_content" 
			android:background="#404040"
			android:textStyle="bold"
    		android:textColor="#B8B8B8"
    		android:textColorHighlight="#B8B8B8"
    		android:paddingLeft="3dp"
	   		/>
	   		
	   	<LinearLayout 
  			android:orientation="horizontal"
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			>
  			
  			<Button android:id="@+id/uninstall"
    			android:text="@string/detail_uninstall"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:layout_weight="1"
    			/>
    			
    		<Button android:id="@+id/kill"
    			android:text="@string/detail_kill"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:layout_weight="1"
    			/>
		</LinearLayout> 		 
 		   		
 		<TextView android:id="@+id/permission_header"
			android:text="@string/detail_permission"
   			android:layout_width="fill_parent" 
   			android:layout_height="wrap_content" 
			android:background="#404040"
			android:textStyle="bold"
    		android:textColor="#B8B8B8"
    		android:textColorHighlight="#B8B8B8"
    		android:paddingLeft="3dp"
	   		/>
	   		
	   	<LinearLayout android:id="@+id/dangerous_list"
  			android:orientation="vertical"
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			android:paddingLeft="16dp"
    		android:paddingRight="12dp"
  			/>
  			
  		<LinearLayout android:id="@+id/show_more"
  			android:orientation="vertical"
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			android:paddingTop="12dp"
    		android:paddingBottom="16dp"
  			>
  			
  			<View 
  				android:layout_width="fill_parent"
  				android:layout_height="1dp"
  				android:background="@android:drawable/divider_horizontal_dark"
  				/>
 		   	
 		   	<LinearLayout
  				android:orientation="horizontal"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:layout_marginTop="16dp"
    			android:layout_marginLeft="16dp"
    			android:layout_marginBottom="12dp"
    			android:duplicateParentState="true"
  				>	
  				
  				<ImageView android:id="@+id/show_more_icon"
  					android:src="@drawable/expander_minimized"
    				android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				/>	

				<TextView android:id="@+id/show_more_text"
					android:text="@string/detail_perms_show"
					android:textAppearance="?android:attr/textAppearanceMedium"  
    				android:layout_width="fill_parent" 
    				android:layout_height="wrap_content"
    				android:layout_alignTop="@+id/show_more_icon"
    				android:layout_gravity="center_vertical"
    				android:paddingLeft="6dp"
    				android:duplicateParentState="true"
 	   				/>
			</LinearLayout>			
 		   	
 		   	<View 
  				android:layout_width="fill_parent"
  				android:layout_height="1dp"
  				android:background="@android:drawable/divider_horizontal_dark"
  				/>
  				
		</LinearLayout>    

		<LinearLayout android:id="@+id/normal_list"
  			android:orientation="vertical"
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			android:paddingLeft="16dp"
    		android:paddingRight="12dp"
    		android:visibility="gone"
  			/>

	</LinearLayout>
</ScrollView>